# advent-of-code-2021

./: .gitignore  Makefile  pyproject.toml
.devcontainer/: Dockerfile  docker-compose.yml
advent_of_code_2021/: day-1.py  day-2.py  day-3.py  day-4.py  day-5.py  day-6.py  day-7.py
helpers/: day-N.template.py  input_parser.py
